# Monitor

./: .gitignore  CMakeLists.txt
include/monitor/: cpuwidget.h  memory.h  parser.h  processor.h  system.h
src/: cpuwidget.cpp  main.cpp  memory.cpp  parser.cpp  processor.cpp  system.cpp
